# gainput

./: CMakeLists.txt  CMakePresets.json
lib/: CMakeLists.txt
lib/include/gainput/: GainputInputDevice.h  GainputInputManager.h
lib/source/gainput/: gainput.cpp.in
lib/source/gainput/hid/hidparsers/: HIDParserPS4Controller.cpp
test/: CMakeLists.txt
